# pdf-compressor

./: .gitattributes  .gitignore  DEPLOY.md  README.md  compress-pdf.cmd  compress-pdf.ps1  pyproject.toml  railway.toml
.github/workflows/: build-macos.yml
install/macos/: install.command  uninstall.command
install/macos/Compress PDF to 30MB.workflow/Contents/: Info.plist  document.wflow
install/windows/: install-context-menu.ps1  uninstall-context-menu.ps1
scripts/: build-macos.sh  build-windows.ps1  package-macos.sh  pdf-compress.spec
server/: Dockerfile  main.py  requirements.txt
src/pdf_compressor/: __init__.py  __main__.py  cli.py  compress.py
web/: README.md  middleware.ts  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/auth/: route.ts
web/src/app/api/auth/logout/: route.ts
web/src/app/api/auth/status/: route.ts
web/src/app/login/: page.tsx
web/src/components/: CompressionControls.tsx  CompressionParticleField.tsx  CompressionVisualizer.tsx  FileUpload.tsx  Header.tsx  ParticleBackground.tsx  ProgressLog.tsx  ResultsCard.tsx
web/src/hooks/: useCompression.ts
web/src/lib/: auth.ts
web/src/lib/compress/: engine.ts  rasterize.ts  runWorker.ts  server.ts  types.ts  worker.ts
