[project]
name = "pdf-compressor"
version = "2.0.0"
description = "Cross-platform PDF compressor with right-click menu integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
pdf-compress = "pdf_compressor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_compressor"]
